# ProjectoAniku/src/models/index.js
@@ -1,5 +1,7 @@
 const Usuario = require('./usuario');
+const Publicacion = require('./publicacion');
 
 module.exports = {
   Usuario,
+  Publicacion,
 };
