# ProjectoAniku/src/openapi/paths.yml
@@ -3,7 +3,7 @@
       tags:
       - usuario
       summary: Crear usuario
-      description: Envía los datos para crear un usuario
+      description: Creación de un usuario
       requestBody:
         description: Creación de usuario
         content:
@@ -12,7 +12,7 @@
               $ref: "#/components/schemas/Usuario"
       responses:
         201:
-          description: Usuario creado correctamente
+          description: Usuario creado correctamente !
           content:
             application/json:
               schema:
@@ -21,12 +21,12 @@
     put:
       tags:
       - usuario
-      summary: Editar usuario por ID
+      summary: Editar usuario por su identificador
       description: Edita un usuario creado
       parameters:
       - name: id
         in: path
-        description: Id del usuario
+        description: Identificador del usuario que deseas modificar
         required: true
         schema:
           type: string
@@ -46,18 +46,18 @@
     delete:
       tags:
       - usuario
-      summary: Eliminar usuario
+      summary: Eliminar usuario por su identificador
       description: Eliminar el usuario que quieras
       parameters:
       - name: id
         in: path
-        description: Id del usuario que deseas eliminar
+        description: Identificador del usuario que deseas eliminar
         required: trues
         schema:
-          type: number
+          type: string
       responses:
         201:
-          description: Usuario borrado correctamente
+          description: Usuario borrado correctamente !
           content:
             application/json:
               schema:
@@ -67,7 +67,7 @@
       tags:
       - publicacion
       summary: Crear publicación
-      description: Envía los datos para publicar 
+      description: Creación de tu publicación
       requestBody:
         description: Creación de publicación
         content:
@@ -76,44 +76,28 @@
               $ref: "#/components/schemas/Publicacion"
       responses:
         201:
-          description: Publicado con éxito
+          description: Publicado con éxito !
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/PostPublicacion"
-  
-
-
-#    delete:
-#      tags:
-#      - publicacion
-#      summary: Eliminar publicacion
-#      description: Eliminar la publicacion que quieras
-#      parameters:
-#      - name: telephone
-#        in: path
-#        description: Teléfono del usuario
-#        required: true
-#        schema:
-#          type: number
-#      responses:
-#        201:
-#          description: Publicacion borrada correctamente
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/DeletePublicacion"
-
-#      - publicacion: id
-#        in: path
-#        description: Id de la publicacion que deseas eliminar
-#        required: trues
-#        schema:
-#          type: string
-#      responses:
-#        201:
-#          description: Has borrado la publicacion exitosamente
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/DeletePublicacion"
+  "/publicacion/{id}":
+    delete:
+      tags:
+      - publicacion
+      summary: Eliminar publicacion
+      description: Eliminar la publicacion que quieras
+      parameters:
+      - name: id
+        in: path
+        description: Identificador de la publicación
+        required: trues
+        schema:
+          type: number
+      responses:
+        201:
+          description: Publicacion borrada correctamente !
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DeletePublicacion"
